[project]
name = "book-python-oop-9781801077262"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ding Liu", email = "contact@dingliu.me"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "black>=25.1.0",
    "isort>=6.0.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
]
